changes in AutoComplete, Main, crawlLiv, config

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,11 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+crawled_liv.rent
+crawled_rental.ca
+crawled_rentSeeker.ca
+parsed_rental.ca
+parsed_rentSeeker.ca
 ### VS Code ###
 .vscode/
 
