--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>2.11.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.6.2</version>
+        </dependency>
 
     </dependencies>
 
